<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">CarMonitor</string>

    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="ontext"> Stop</string>
    <string name="offtext"> Start</string>
    <string name="not_connected">You are not connected to a car</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving car monitor.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="discoverable">Make discoverable</string>
    <string name="connect">Connect to a car</string>
    <string name="carData">Data received from the Car</string>
    <string name="magnetHint">Magnetic field under front of car</string>
    <string name="magnetometer">Magnet</string>
    <string name="rfidReader">RFID</string>
    <string name="RFIDHint">Last RFID TAG</string>
    <string name="controlData">Data to send to Car</string>
    <string name="title_activity_device_list">DeviceListActivity</string>
    <string name="settingsFeedbackSet">Configuration Sent</string>
    <string name="settingsFeedbackSave">Configuration Saved</string>

    <!-- Version Name -->
    <string name="version_string">Version 2.5</string>
</resources>
