<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#202A30"
            android:orientation="vertical"
            android:stretchColumns="1">

            <TableRow android:padding="5dip">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_span="2"
                    android:gravity="center_horizontal"
                    android:text="@string/carData"
                    android:textColor="#EB641E"
                    android:textSize="36sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#555">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginLeft="10dp"
                    android:text="@string/magnetometer"
                    android:textColor="#fff"
                    android:textSize="36sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/magnetValue"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_marginLeft="10dp"
                    android:background="#fff"
                    android:hint="@string/magnetHint"
                    android:padding="5dp"
                    android:textColor="#000"
                    android:textSize="36sp" />
            </TableRow>

            <TableRow android:background="#555">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginLeft="10dp"
                    android:text="@string/rfidReader"
                    android:textColor="#fff"
                    android:textSize="36sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/RFIDtext"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_marginLeft="10dp"
                    android:background="#fff"
                    android:hint="@string/RFIDHint"
                    android:padding="5dp"
                    android:textSize="36sp" />
            </TableRow>

            <TableRow android:background="#555">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginLeft="10dp"
                    android:text="Tacho"
                    android:textColor="#fff"
                    android:textSize="36sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tachoValue"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_marginLeft="10dp"
                    android:background="#fff"
                    android:hint="Tacho count"
                    android:padding="5dp"
                    android:textColor="#000"
                    android:textSize="36sp" />
            </TableRow>

            <TableRow android:background="#555">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginLeft="10dp"
                    android:text="Actual Speed"
                    android:textColor="#fff"
                    android:textSize="36sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/speedValue"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_marginLeft="10dp"
                    android:background="#fff"
                    android:hint="Calculated Car Speed"
                    android:padding="5dp"
                    android:textColor="#000"
                    android:textSize="36sp" />
            </TableRow>


            <TableRow>

            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#202A30"
            android:orientation="vertical"
            android:stretchColumns="1">

            <TableRow
                android:layout_marginTop="20dp"
                android:paddingLeft="430dp"
                android:paddingRight="50dp">

                <ToggleButton
                    android:id="@+id/startStopButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_span="1"
                    android:checked="false"
                    android:textOff="@string/offtext"
                    android:textOn="@string/ontext" />

            </TableRow>

        </TableLayout>
    </LinearLayout>
</ScrollView>